@@ -15,11 +15,13 @@ ${template_hooks['extra_head']()}
 <div class="container">
       <header class="blog-header py-3">
         <div class="row nbb-header align-items-center">
-          <div class="col-md-3 col-xs-2" style="padding: 0; width: auto;">
-            <button class="navbar-toggler navbar-light bg-light nbb-navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-navbar" aria-controls="bs-navbar" aria-expanded="false" aria-label="Toggle navigation">
+          <div class="col-md-3 col-xs-2" style="width: auto;">
+            <button class="navbar-toggler navbar-light bg-light nbb-navbar-toggler" type="button" data-toggle="collapse" data-target=".bs-nav-collapsible" aria-controls="bs-navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            ${search_form}
+            <div class="collapse bs-nav-collapsible search-form-holder">
+                ${search_form}
+            </div>
         </div>
           <div class="col-md-6 col-xs-10 text-center" style="width: auto;">
             <a class="navbar-brand blog-header-logo text-dark" href="${abs_link(_link("root", None, lang))}">
@@ -32,20 +34,20 @@ ${template_hooks['extra_head']()}
         % endif
         </a>
           </div>
-          <div class="col-md-3 d-flex justify-content-end align-items-center">
-                <%block name="belowtitle">
-                %if len(translations) > 1:
-                    ${base.html_translations()}
-                %endif
-                </%block>
-                <div class="d-none d-md-inline"><%block name="sourcelink"></%block></div>
-                ${template_hooks['menu_alt']()}
-          </div>
-        </div>
+            <div class="col-md-3 justify-content-end align-items-center bs-nav-collapsible collapse flex-collapse bootblog4-right-nav">
+                    <%block name="belowtitle">
+                    %if len(translations) > 1:
+                        ${base.html_translations()}
+                    %endif
+                    </%block>
+                    <%block name="sourcelink"></%block>
+                    ${template_hooks['menu_alt']()}
+            </div>
+    </div>
 </header>
 
 <nav class="navbar navbar-expand-md navbar-light bg-white static-top">
-        <div class="collapse navbar-collapse" id="bs-navbar">
+        <div class="collapse navbar-collapse bs-nav-collapsible" id="bs-navbar">
             <ul class="navbar-nav nav-fill d-flex w-100">
                 ${base.html_navigation_links()}
                 ${template_hooks['menu']()}
